# documentation

./: main.py  mkdocs.yml  pyproject.toml
docs/: my_hobbies.md
